<resources>
    <string name="app_name" translatable="false">CarRegister</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password or user is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="user.already.registered">User already registered</string>
    <string name="user.success.registered">User %1$s! registered</string>
    <string name="title_activity_list_car" translatable="false">ListCarActivity</string>
    <string name="car_image">Car image</string>
    <string name="brand">Brand</string>
    <string name="year" >Year</string>
    <string name="name">Name</string>
    <string name="notes">Notes</string>
</resources>
